--- a/utils/Makefile.am
+++ b/utils/Makefile.am
@@ -9,4 +9,10 @@ xprof_utils.h: $(srcdir)/xprof_utils.h.erb
 	$(ERB) $(srcdir)/xprof_utils.h.erb > xprof_utils.h
 
 CLEANFILES = lttng/tracepoint_gen.h xprof_utils.h
-EXTRA_DIST = LTTng.rb tracepoint_gen.rb yaml_ast.rb xprof_utils.h.erb
+EXTRA_DIST = \
+	LTTng.rb \
+	tracepoint_gen.rb \
+	yaml_ast.rb \
+	xprof_utils.h.erb \
+	gen_dummy_trace.rb \
+	dust.rb
