Fix make distcheck.

--- a/cuda/Makefile.am
+++ b/cuda/Makefile.am
@@ -118,6 +118,7 @@ MODIFIED_CUDA_HDR = \
 modified_include/cuda.h: $(CUDA_HDR) $(srcdir)/headers.patch
 	$(RM) -r modified_include/
 	cp -r $(srcdir)/include/ modified_include/
+	chmod -R u+w modified_include/
 	cat $(srcdir)/headers.patch | patch -i - -d modified_include/ -s -p1
 
 $(MODIFIED_CUDA_EXTRA_HDR): modified_include/cuda.h
@@ -228,16 +229,19 @@ libTracerCUDART_la_LDFLAGS = $(LTTNG_UST_LIBS) -ldl -lpthread $(LIBFFI_LIBS)
 libTracerCUDART_la_LDFLAGS += -version-number 11:0:3
 libTracerCUDART_la_LIBADD = libcudarttracepoints.la
 
-install-exec-hook::
-	mkdir -p $(pkglibdir)
-	mkdir -p $(pkglibdir)/cuda
-	mkdir -p $(pkglibdir)/cudart
-	$(RM) $(pkglibdir)/cudart/libcudart.so.11.0 $(pkglibdir)/cudart/libcudart.so
-	$(RM) $(pkglibdir)/cuda/libcuda.so.1 $(pkglibdir)/cuda/libcuda.so
-	ln -s $(libdir)/libTracerCUDART.so.11.0.3 $(pkglibdir)/cudart/libcudart.so.11.0
-	ln -s $(pkglibdir)/cudart/libcudart.so.11.0 $(pkglibdir)/cudart/libcudart.so
-	ln -s $(libdir)/libTracerCUDA.so.1.0.0 $(pkglibdir)/cuda/libcuda.so.1
-	ln -s $(pkglibdir)/cuda/libcuda.so.1 $(pkglibdir)/cuda/libcuda.so
+install-exec-hook:
+	$(MKDIR_P) $(DESTDIR)$(pkglibdir)/cudart
+	$(MKDIR_P) $(DESTDIR)$(pkglibdir)/cuda
+	$(LN_S) -f $(DESTDIR)$(libdir)/libTracerCUDART.so.11.0.3 $(DESTDIR)$(pkglibdir)/cudart/libcudart.so.11.0
+	$(LN_S) -f $(DESTDIR)$(pkglibdir)/cudart/libcudart.so.11.0 $(DESTDIR)$(pkglibdir)/cudart/libcudart.so
+	$(LN_S) -f $(DESTDIR)$(libdir)/libTracerCUDA.so.1.0.0 $(DESTDIR)$(pkglibdir)/cuda/libcuda.so.1
+	$(LN_S) -f $(DESTDIR)$(pkglibdir)/cuda/libcuda.so.1 $(DESTDIR)$(pkglibdir)/cuda/libcuda.so
+
+uninstall-hook:
+	$(RM) -f $(DESTDIR)$(pkglibdir)/cudart/libcudart.so.11.0 $(DESTDIR)$(pkglibdir)/cudart/libcudart.so
+	$(RM) -f $(DESTDIR)$(pkglibdir)/cuda/libcuda.so.1 $(DESTDIR)$(pkglibdir)/cuda/libcuda.so
+	-rmdir $(DESTDIR)$(pkglibdir)/cudart
+	-rmdir $(DESTDIR)$(pkglibdir)/cuda
 
 CUDA_LIB_GEN = \
 	$(srcdir)/gen_cuda_library_base.rb \
