--- a/opencl/Makefile.am
+++ b/opencl/Makefile.am
@@ -111,11 +111,14 @@ libTracerOpenCL_la_LDFLAGS += -Wl,--version-script,$(srcdir)/tracer_opencl.map -
 libTracerOpenCL_la_DEPENDS = $(srcdir)/tracer_opencl.map
 libTracerOpenCL_la_LIBADD = libtracepoints.la
 
-install-exec-hook::
-	mkdir -p $(pkglibdir)/opencl
-	$(RM) $(pkglibdir)/opencl/libOpenCL.so.1 $(pkglibdir)/opencl/libOpenCL.so
-	ln -s $(libdir)/libTracerOpenCL.so.1.0.0 $(pkglibdir)/opencl/libOpenCL.so.1
-	ln -s $(pkglibdir)/opencl/libOpenCL.so.1 $(pkglibdir)/opencl/libOpenCL.so
+install-exec-hook:
+	$(MKDIR_P) $(DESTDIR)$(pkglibdir)/opencl
+	$(LN_S) -f $(DESTDIR)$(libdir)/libTracerOpenCL.so.1.0.0 $(DESTDIR)$(pkglibdir)/opencl/libOpenCL.so.1
+	$(LN_S) -f $(DESTDIR)$(pkglibdir)/opencl/libOpenCL.so.1 $(DESTDIR)$(pkglibdir)/opencl/libOpenCL.so
+
+uninstall-hook:
+	$(RM) -f $(DESTDIR)$(pkglibdir)/opencl/libOpenCL.so.1 $(DESTDIR)$(pkglibdir)/opencl/libOpenCL.so
+	-rmdir $(DESTDIR)$(pkglibdir)/opencl
 
 clprof.c: $(srcdir)/clprof_callbacks.cpp.erb $(srcdir)/clprof_callbacks.h.erb $(srcdir)/clprof.c.erb $(srcdir)/gen_clprof.rb opencl_model.yaml babeltrace_cl_callbacks.h tracer_opencl.h
 	SRC_DIR=$(srcdir) $(RUBY) $(srcdir)/gen_clprof.rb production
@@ -284,4 +287,5 @@ CLEANFILES = \
 	clprof_callbacks.h \
 	testing_clprof.c \
 	testing_clprof_callbacks.cpp \
-	testing_clprof_callbacks.h
+	testing_clprof_callbacks.h \
+	clprof.sh
