--- a/xprof/Makefile.am
+++ b/xprof/Makefile.am
@@ -3,3 +3,5 @@ bin_SCRIPTS = iprof
 iprof: $(top_builddir)/utils/xprof.sh.erb
 	$(ERB) -T 1 languages=["opencl","ze"] $(top_builddir)/utils/xprof.sh.erb  > $@
 	chmod a+x $@
+
+CLEANFILES = iprof
