--- a/configure.ac
+++ b/configure.ac
@@ -18,6 +18,8 @@ AM_PROG_AR
 LT_INIT([disable-static])
 
 # Checks for programs.
+AC_PROG_LN_S
+AC_PROG_MKDIR_P
 AC_PROG_CXX
 AC_PROG_CC
 if test -z "$RUBY"; then
