--- a/utils/Makefile.am
+++ b/utils/Makefile.am
@@ -21,4 +21,5 @@ EXTRA_DIST = \
 	gen_dummy_trace.rb \
 	bt2.rb \
 	bt_plugins/dust.rb \
-	bt_plugins/comparator.rb
+	bt_plugins/comparator.rb \
+	xprof_utils.h.erb
