--- a/opencl/tests/interval_profiling_normal_command_queue.out.yaml
+++ b/opencl/tests/interval_profiling_normal_command_queue.out.yaml
@@ -1,4 +1,3 @@
----
 :default_stream: stream0
 :stream_classes:
 - :name: interval_class
@@ -20,28 +19,27 @@
 - :name: lttng:host
   :common_context:
     hostname: aurora12.gov
-    vpid: -1
-    vtid: 3
-    ts: 1
   :payload:
-      name: clSetKernelArg
+      name: clCreateCommandQueue
       dur: 1
+- :name: lttng:traffic
+  :common_context:
+    hostname: aurora12.gov
+  :payload:
+      name: clEnqueueReadBuffer
 - :name: lttng:host
   :common_context:
     hostname: aurora12.gov
-    vpid: -1
-    vtid: 2
-    ts: 0
+    ts: 2
   :payload:
-      name: clSetKernelArg
-      dur: 3
-- :name: lttng:host
+      name: clEnqueueReadBuffer 
+      dur: 2
+- :name: lttng:device
   :common_context:
     hostname: aurora12.gov
-    vpid: -1
-    vtid: 2
-    ts: 4
+    ts: 2
   :payload:
-      name: clSetKernelArg
-      dur: 1
-      err: true
+      name: clEnqueueReadBuffer
+      dur: 65
+      did: 10
+
