--- a/opencl/tests/profiling_interleave_process.yaml
+++ b/opencl/tests/profiling_interleave_process.yaml
@@ -14,42 +14,24 @@
 :streams:
 - :name: stream0
   :class: cl_stream_class
-  :common_context:
-    vtid: 2
 :events:
-- :name: lttng_ust_opencl:clEnqueueReadBuffer_entry
+- :name: lttng_ust_opencl:clEnqueueSVMFree_entry
   :common_context:
     vpid: -1
-- :name: lttng_ust_opencl:clEnqueueWriteBuffer_entry
-  :common_context:
-    vpid: 1
+- :name: lttng_ust_opencl:clEnqueueSVMFree_entry
 - :name: lttng_ust_opencl_profiling:event_profiling
-  :payload:
-    event: 12
   :common_context:
     vpid: -1
 - :name: lttng_ust_opencl_profiling:event_profiling
-  :payload:
-    event: 12
-  :common_context:
-    vpid: 1
-- :name: lttng_ust_opencl:clEnqueueReadBuffer_exit
+- :name: lttng_ust_opencl:clEnqueueSVMFree_exit
   :common_context:
     vpid: -1
-- :name: lttng_ust_opencl:clEnqueueWriteBuffer_exit
-  :common_context:
-    vpid: 1
+- :name: lttng_ust_opencl:clEnqueueSVMFree_exit
 - :name: lttng_ust_opencl_profiling:event_profiling_results
   :payload:
-    event: 12
-    start: 0
     end: 10
   :common_context:
     vpid: -1
 - :name: lttng_ust_opencl_profiling:event_profiling_results
   :payload:
-    event: 12
-    start: 0
     end: 20
-  :common_context:
-    vpid: 1
