--- a/opencl/tests/profiling_normal_nd_range_kernel_name.yaml
+++ b/opencl/tests/profiling_normal_nd_range_kernel_name.yaml
@@ -14,25 +14,18 @@
 :streams:
 - :name: stream0
   :class: cl_stream_class
-  :common_context:
-    vpid: -1
-    vtid: 2
 :events:
 - :name: lttng_ust_opencl_arguments:kernel_info
   :payload:
     kernel: 12
-    function_name: __ompoffload
+    function_name: foo
   :common_context:
     vtid: 3
 - :name: lttng_ust_opencl:clEnqueueNDRangeKernel_entry
   :payload:
     kernel: 12
 - :name: lttng_ust_opencl_profiling:event_profiling
-  :payload:
-    event: 12
 - :name: lttng_ust_opencl:clEnqueueNDRangeKernel_exit
 - :name: lttng_ust_opencl_profiling:event_profiling_results
   :payload:
-    event: 12
-    start: 0
     end: 10
